# cobaltstrike-mcp-server

./: .env.example  .gitignore  README.md  cs_audit.py  cs_client.py  cs_content_safety.py  cs_documents.py  cs_files.py  cs_interpreter.py  cs_mcp.py  cs_resources.py  cs_server.py  cs_streams.py  pyproject.toml  requirements.txt  setup.bat  setup.sh
.github/workflows/: tests.yml
examples/claude_desktop_config/: claude_config_development.json  claude_config_production.json  claude_config_windows.json  claude_desktop_config_example.json
tests/: test_core.py
