[project]
name = "cobaltstrike-mcp-server"
version = "0.1.0"
description = "MCP server exposing Cobalt Strike REST API and WebSocket stream tools."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "fastmcp==3.3.1",
    "httpx==0.28.1",
    "typing-extensions==4.15.0",
    "websocket-client==1.9.0",
]

[tool.uv]
package = false
